# co-converter

./: convert.py  input.xlsx  output.tt  pyproject.toml
