[tool.poetry]
name = "conceptualoverview"
version = "0.1.0"
description = ""
authors = ["Simon Liedtke <simon.liedtke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.4"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"
openpyxl = "^3.0.9"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
